--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,108 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.fragments.ProfileFragment">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myquotesrecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_100"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        android:paddingStart="0dp"
-        android:paddingEnd="0dp" />
-
-    <ProgressBar
-        android:id="@+id/loading"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@drawable/circle" />
+        android:background="@color/white"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".View.fragments.ProfileFragment">
 
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:background="@color/transparent"
-        android:fitsSystemWindows="true"
-        app:elevation="0dp">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsetoolbar"
-            app:contentScrim="@color/white"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/myquotesrecycler"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey_100"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="0"
+            android:progressDrawable="@drawable/circle" />
+
+
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
-            app:expandedTitleGravity="top|center"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            android:fitsSystemWindows="true">
+            android:layout_width="match_parent"
+            android:background="@color/transparent"
+            android:fitsSystemWindows="true"
+            app:elevation="0dp">
 
-
-            <LinearLayout
-                android:orientation="vertical"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsetoolbar"
+                app:contentScrim="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                app:layout_collapseMode="parallax">
-
+                app:expandedTitleGravity="top|center"
+                app:layout_scrollFlags="exitUntilCollapsed|scroll"
+                android:fitsSystemWindows="true">
 
 
                 <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
+                    android:padding="10dp"
+                    app:layout_collapseMode="parallax">
 
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/profilepic"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:padding="5dp"
-                        android:src="@drawable/notfound"
-                        android:tooltipText="Clique na foto para alterá-la"
-                        app:civ_border_color="@color/colorAccent"
-                        app:civ_border_width="1dp" />
 
-                    <TextView
-                        android:id="@+id/posts"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:padding="5dp"
-                        android:text="Posts"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
 
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profilepic"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_gravity="center"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:padding="5dp"
+                            android:src="@drawable/notfound"
+                            android:tooltipText="Clique na foto para alterá-la"
+                            app:civ_border_color="@color/colorAccent"
+                            app:civ_border_width="1dp" />
+
+                        <TextView
+                            android:id="@+id/posts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:padding="5dp"
+                            android:text="Posts"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ripple_button"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:text="Editar Perfil"
+                        android:textColor="@color/white"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_button"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Editar Perfil"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
