--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -43,27 +43,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            app:elevation="0dp"
             android:fitsSystemWindows="true">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="top"
-                android:background="@drawable/bottom_line"
-                app:title="@string/username"
-                app:titleTextAppearance="@style/ToolbarTitle" />
+
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsetoolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:contentScrim="@color/white"
-                app:expandedTitleGravity="top|center"
-                app:layout_scrollFlags="scroll|enterAlways"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:titleEnabled="false">
-                <LinearLayout
 
+                <LinearLayout
+                    android:layout_marginTop="34dp"
+                    app:layout_collapseMode="parallax"
+                    android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -72,13 +68,11 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profilepic"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-
+                        android:layout_width="120dp"
+                        android:layout_height="130dp"
                         android:layout_gravity="center"
                         android:foreground="?attr/selectableItemBackground"
                         android:padding="5dp"
-                        android:src="@drawable/notfound"
                         android:tooltipText="Clique na foto para alterá-la"
                         android:transitionName="profilepic"
                         app:civ_border_color="@color/colorAccent"
@@ -90,12 +84,17 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="5dp"
-                        android:text="Posts"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
 
                 </LinearLayout>
+                <androidx.appcompat.widget.Toolbar
+                    app:layout_collapseMode="pin"
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:title="@string/username"/>
 
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
