night mode implements

--- a/app/src/main/res/drawable/rounds.xml
+++ b/app/src/main/res/drawable/rounds.xml
@@ -17,7 +17,7 @@
 
 
             <!-- Background color -->
-            <solid android:color="@color/white" />
+            <solid android:color="?attr/background" />
             <stroke
                 android:width="1dp"
                 android:color="@color/grey_300" />
