--- a/app/src/main/res/drawable/topround.xml
+++ b/app/src/main/res/drawable/topround.xml
@@ -17,6 +17,6 @@
 
 
     <!-- Background color -->
-    <solid android:color="@color/white" />
+    <solid android:color="?attr/background" />
 
 </shape>
