--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,6 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".View.fragments.ProfileFragment">
 
@@ -15,7 +14,6 @@
             android:id="@+id/myquotesrecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey_100"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:paddingStart="0dp"
             android:paddingEnd="0dp" />
@@ -41,7 +39,7 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsetoolbar"
-                app:contentScrim="@color/white"
+                app:contentScrim="?attr/background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:expandedTitleGravity="top|center"
@@ -85,7 +83,6 @@
                             android:padding="5dp"
                             android:text="Posts"
                             android:textAlignment="center"
-                            android:textColor="@color/black"
                             android:textSize="20sp" />
 
                     </LinearLayout>
