--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/nunitoregular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
         <item name="colorAccent">@color/deep_purple_A200</item>
-        <item name="android:statusBarColor">@color/grey_100</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:statusBarColor">?attr/cardBackgroundColor</item>
         <item name="android:windowAnimationStyle">@style/AppTheme.Animation</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
@@ -25,7 +23,6 @@
     <style name="Settingslist" parent="Widget.AppCompat.TextView">
          <item name="android:drawablePadding">5dp</item>
         <item name="android:fontFamily">@font/nunito_light</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
           <item name="android:padding">5dp</item>
         <item name="android:textSize">20sp</item>
@@ -36,7 +33,6 @@
     <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:panelBackground">@drawable/round</item>
         <item name="android:fontFamily">@font/nunitolight</item>
-        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="AppTheme.Animation" parent="@android:style/Animation.Activity">
@@ -44,7 +40,6 @@
     </style>
 
     <style name="BottomOptionstext" parent="@android:style/TextAppearance.Widget.TabWidget">
-        <item name="android:textColor">@color/black</item>
         <item name="android:padding">5dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
@@ -77,7 +72,6 @@
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
         <item name="colorAccent">@color/deep_purple_A200</item>
-        <item name="android:textColor">@color/white</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
@@ -86,7 +80,6 @@
         <item name="android:fontFamily">@font/nunitoregular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/deep_purple_A200</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
