night mode implements

--- a/app/src/main/res/drawable/ic_garbage.xml
+++ b/app/src/main/res/drawable/ic_garbage.xml
@@ -3,15 +3,15 @@
     android:viewportHeight="617.3333"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="?actionMenuTextColor"
         android:pathData="m304.121,338.375c-6.895,0.02 -12.48,5.605 -12.5,12.5v152.5c0,6.906 5.602,12.5 12.5,12.5 6.902,0 12.5,-5.594 12.5,-12.5v-152.5c-0.02,-6.895 -5.602,-12.48 -12.5,-12.5zM304.121,338.375" />
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="?actionMenuTextColor"
         android:pathData="m384.121,338.375c-6.895,0.02 -12.48,5.605 -12.5,12.5v152.5c0,6.906 5.602,12.5 12.5,12.5 6.902,0 12.5,-5.594 12.5,-12.5v-152.5c-0.02,-6.895 -5.602,-12.48 -12.5,-12.5zM384.121,338.375" />
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="?actionMenuTextColor"
         android:pathData="m224.121,338.375c-6.895,0.02 -12.48,5.605 -12.5,12.5v152.5c0,6.906 5.602,12.5 12.5,12.5 6.902,0 12.5,-5.594 12.5,-12.5v-152.5c-0.02,-6.895 -5.602,-12.48 -12.5,-12.5zM224.121,338.375" />
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="?actionMenuTextColor"
         android:pathData="m471.121,83h-71.496v-36.375c-0.008,-15.258 -12.375,-27.621 -27.629,-27.625h-135.746c-15.258,0.004 -27.621,12.367 -27.629,27.625v36.5h-71.496c-27.516,0.008 -51.004,19.863 -55.582,46.992 -4.582,27.129 11.094,53.602 37.078,62.633 -0.246,0.895 -0.371,1.82 -0.375,2.75v339.75c0.016,34.512 27.988,62.484 62.5,62.5h246.875c34.512,-0.016 62.492,-27.988 62.5,-62.5v-339.75c0.012,-0.93 -0.117,-1.855 -0.375,-2.75 26.02,-9.063 41.688,-35.586 37.078,-62.75s-28.152,-47.023 -55.703,-47zM233.75,46.625c0.004,-1.449 1.176,-2.617 2.621,-2.625h135.754c1.445,0.008 2.617,1.176 2.621,2.625v36.5h-140.996zM427.5,572.75h-246.754c-20.684,-0.059 -37.438,-16.816 -37.5,-37.5v-339.375h321.875v339.375c-0.117,20.707 -16.914,37.453 -37.621,37.5zM471.121,170.875h-333.996c-17.332,0 -31.379,-14.047 -31.379,-31.375s14.047,-31.375 31.379,-31.375h333.996c17.332,0 31.379,14.047 31.379,31.375s-14.047,31.375 -31.379,31.375zM471.121,170.875" />
 </vector>
