--- a/app/src/main/res/drawable/ic_profile.xml
+++ b/app/src/main/res/drawable/ic_profile.xml
@@ -1,6 +1,10 @@
 <vector android:autoMirrored="true" android:height="24dp"
     android:viewportHeight="438.6" android:viewportWidth="438"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="m219.199,0c55.781,0 101,45.219 101,101s-45.219,101 -101,101 -101,-45.219 -101,-101c0.055,-55.758 45.242,-100.945 101,-101zM219.199,0"/>
-    <path android:fillColor="#FF000000" android:pathData="m46.301,438.602c1.598,-47.203 19.398,-90.301 50.598,-122.203 32.203,-32.898 75.602,-51 122.301,-51s90.102,18.102 122.301,51c31.199,31.902 49,75 50.602,122.203zM46.301,438.602"/>
+    <path
+        android:fillColor="?actionMenuTextColor"
+        android:pathData="m219.199,0c55.781,0 101,45.219 101,101s-45.219,101 -101,101 -101,-45.219 -101,-101c0.055,-55.758 45.242,-100.945 101,-101zM219.199,0" />
+    <path
+        android:fillColor="?actionMenuTextColor"
+        android:pathData="m46.301,438.602c1.598,-47.203 19.398,-90.301 50.598,-122.203 32.203,-32.898 75.602,-51 122.301,-51s90.102,18.102 122.301,51c31.199,31.902 49,75 50.602,122.203zM46.301,438.602" />
 </vector>
