--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/white">
+    android:background="?android:colorBackground">
 
     <LinearLayout
         android:padding="5dp"
@@ -53,7 +53,6 @@
                     android:textSize="14sp" />
                 <TextView
                     android:alpha="0"
-
                     android:id="@+id/dia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
