--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -6,7 +6,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="?android:colorBackground"
         tools:context=".View.fragments.ProfileFragment">
 
         <ProgressBar
@@ -24,7 +24,7 @@
             android:id="@+id/myquotesrecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey_100"
+            android:background="?android:colorBackground"
             android:paddingStart="0dp"
             android:paddingEnd="0dp"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
@@ -42,7 +42,7 @@
             android:id="@+id/appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="?android:colorBackground"
             app:elevation="0dp"
             android:fitsSystemWindows="true">
 
