--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
         <item name="colorAccent">@color/deep_purple_A200</item>
-        <item name="android:statusBarColor">?attr/cardBackgroundColor</item>
+        <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="android:windowAnimationStyle">@style/AppTheme.Animation</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
@@ -80,7 +80,7 @@
         <item name="android:fontFamily">@font/nunitoregular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">?android:textColor</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
