bug fixes on new alert for version checks

--- a/app/src/main/res/layout/version_alert.xml
+++ b/app/src/main/res/layout/version_alert.xml
@@ -10,9 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_margin="25dp"
-        android:background="@color/colorPrimaryDark"
-        android:fontFamily="@font/nunito_black"
+        android:background="@drawable/ripple_button"
+         android:fontFamily="@font/nunito_black"
         android:padding="10dp"
         android:text="Atualizar agora"
         android:textColor="@color/white"
