--- a/app/src/main/res/drawable-xxhdpi/ripple_button.xml
+++ b/app/src/main/res/drawable-xxhdpi/ripple_button.xml
@@ -9,8 +9,11 @@
                 android:right="10dp"
                 />
 
-            <corners android:radius="5dp" />
-            <gradient android:startColor="@color/colorPrimary" android:type="linear" android:angle="45" android:endColor="@color/colorPrimaryDark"/>
+            <gradient
+                android:angle="45"
+                android:endColor="@color/colorPrimaryDark"
+                android:startColor="@color/colorPrimary"
+                android:type="linear" />
         </shape>
     </item>
 </ripple>
