--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -9,10 +9,10 @@
 
     <item android:top="-3dp" android:right="-3dp" android:left="-3dp">
         <shape>
-            <solid android:color="@color/white" />
+            <solid android:color="?android:colorBackground" />
             <stroke
                 android:width="1dp"
-                android:color="@color/grey_300" />
+                android:color="?android:textColorHint" />
         </shape>
     </item>
 
