--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,7 @@
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
             android:elevation="3dp"
+            android:background="@drawable/bottom_line"
                 android:layout_width="match_parent"
                 android:animateLayoutChanges="true"
                 android:layout_height="?attr/actionBarSize"
