--- a/app/src/main/res/drawable-xxhdpi/ripple_button.xml
+++ b/app/src/main/res/drawable-xxhdpi/ripple_button.xml
@@ -14,6 +14,7 @@
                 android:endColor="@color/colorPrimaryDark"
                 android:startColor="@color/colorPrimary"
                 android:type="linear" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 </ripple>
