--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,2 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector></selector>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+
+            <gradient android:angle="90" android:centerColor="@color/colorAccent" android:endColor="@color/colorPrimaryDark" android:startColor="@color/colorPrimary" />
+        </shape>
+    </item>
+</selector>
