--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,15 +11,23 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:padding="15dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_centerInParent="true"
         android:layout_height="wrap_content">
-
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:tint="?android:textColorPrimary"
             android:src="@drawable/ic_saturn_and_other_planets" />
+        <TextView
+            android:layout_gravity="center"
+            android:textColor="?android:textColorPrimary"
+            android:fontFamily="@font/lato_black"
+            style="@style/TextAppearance.AppCompat.Display2"
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
     <TextView
         android:layout_margin="10dp"
