--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -35,15 +35,15 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/userpic"
-                    android:layout_width="40dp"
+                    android:layout_width="60dp"
                     android:transitionName="profilepic"
-                    android:layout_height="40dp"
+                    android:layout_height="60dp"
                     android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_astronaut" />
                 <LinearLayout
                     android:padding="4dp"
                     android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
 
@@ -60,7 +60,7 @@
                         android:textAlignment="center"
                         android:textStyle="italic"
                         android:id="@+id/dia"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="5dp" />
                 </LinearLayout>
